feat: release v1.7.0 with reviewed catalog and five new skills
Complete the 275-skill review, preserving its validation evidence, and add
specialist guidance for Java time, schema migrations, Spring API security,
CDC operations, and Maven/Gradle builds. The registry now contains 280 skills.

Align workspace versions, CLI output, lockfile and release notes for v1.7.0.
Validate with npm run verify (355 tests), executable examples and five
independent response evaluations for the additions.